--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.12",
+    "@clerk/themes": "^1.7.12",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@tabler/icons-react": "^3.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "framer-motion": "^11.0.28",
+    "framer-motion": "^11.1.1",
     "icons-react": "^3.7.1",
     "lucide-react": "^0.368.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "^14.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
