--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/themes": "^1.7.12",
     "@hookform/resolvers": "^3.3.4",
     "@next/env": "^14.2.2",
+    "@prisma/client": "^5.13.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
@@ -25,9 +26,11 @@
     "clsx": "^2.1.0",
     "framer-motion": "^11.1.1",
     "icons-react": "^3.7.1",
+    "isomorphic-fetch": "^3.0.0",
     "lucide-react": "^0.368.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "^14.2.1",
+    "prisma": "^5.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-element-to-jsx-string": "^15.0.0",
@@ -42,6 +45,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/isomorphic-fetch": "^0.0.39",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
