--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.29.12",
     "@clerk/themes": "^1.7.12",
+    "@dnd-kit/core": "^6.1.0",
     "@hookform/resolvers": "^3.3.4",
     "@next/env": "^14.2.2",
     "@prisma/client": "^5.13.0",
