--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@clerk/nextjs": "^4.29.12",
     "@clerk/themes": "^1.7.12",
-    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/core": "^6.1.0-next-2023106221355",
+    "@dnd-kit/sortable": "^8.0.0",
     "@hookform/resolvers": "^3.3.4",
     "@next/env": "^14.2.2",
     "@prisma/client": "^5.13.0",
@@ -23,9 +24,11 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@tabler/icons-react": "^3.2.0",
+    "@types/uuid": "^9.0.8",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "focus-trap-react": "^10.2.3",
     "framer-motion": "^11.1.1",
     "icons-react": "^3.7.1",
     "isomorphic-fetch": "^3.0.0",
@@ -33,8 +36,8 @@
     "mini-svg-data-uri": "^1.4.4",
     "next": "^14.2.1",
     "prisma": "^5.13.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-element-to-jsx-string": "^15.0.0",
     "react-hook-form": "^7.51.3",
     "react-hot-toast": "^2.4.1",
@@ -43,6 +46,7 @@
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "unsplash-js": "^7.0.19",
+    "uuid": "^9.0.1",
     "zod": "^3.23.3",
     "zustand": "^4.5.2"
   },
