added modal for card and transtack query for data fetching

--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@tabler/icons-react": "^3.2.0",
+    "@tanstack/react-query": "^5.36.2",
     "@types/uuid": "^9.0.8",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "focus-trap-react": "^10.2.3",
-    "framer-motion": "^11.1.1",
+    "framer-motion": "^11.1.9",
     "icons-react": "^3.7.1",
     "isomorphic-fetch": "^3.0.0",
     "lucide-react": "^0.368.0",
@@ -45,7 +46,7 @@
     "react-icons": "^5.1.0",
     "sonner": "^1.4.41",
     "swr": "^2.2.5",
-    "tailwind-merge": "^2.2.2",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "unsplash-js": "^7.0.19",
     "uuid": "^9.0.1",
