--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@next/env": "^14.2.2",
     "@prisma/client": "^5.13.0",
     "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-popover": "^1.0.7",
@@ -25,8 +25,19 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/react-toggle-group": "^1.0.4",
     "@tabler/icons-react": "^3.2.0",
     "@tanstack/react-query": "^5.36.2",
+    "@tiptap/extension-bold": "^2.4.0",
+    "@tiptap/extension-bullet-list": "^2.4.0",
+    "@tiptap/extension-italic": "^2.4.0",
+    "@tiptap/extension-list-item": "^2.4.0",
+    "@tiptap/extension-strike": "^2.4.0",
+    "@tiptap/extension-underline": "^2.4.0",
+    "@tiptap/pm": "^2.4.0",
+    "@tiptap/react": "^2.4.0",
+    "@tiptap/starter-kit": "^2.4.0",
     "@types/uuid": "^9.0.8",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
@@ -46,11 +57,12 @@
     "react-element-to-jsx-string": "^15.0.0",
     "react-hook-form": "^7.51.3",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.1.0",
+    "react-icons": "^5.2.1",
     "sonner": "^1.4.41",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "tiptap-extensions": "^1.35.2",
     "unsplash-js": "^7.0.19",
     "uuid": "^9.0.1",
     "zod": "^3.23.3",
