completed description part

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "dompurify": "^3.1.6",
     "focus-trap-react": "^10.2.3",
     "framer-motion": "^11.1.9",
     "icons-react": "^3.7.1",
@@ -69,6 +70,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/isomorphic-fetch": "^0.0.39",
     "@types/node": "^20",
     "@types/react": "^18",
