--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "dompurify": "^3.1.6",
+    "emoji-picker-react": "^4.11.1",
     "focus-trap-react": "^10.2.3",
     "framer-motion": "^11.1.9",
     "icons-react": "^3.7.1",
@@ -54,6 +56,7 @@
     "next-themes": "^0.3.0",
     "prisma": "^5.13.0",
     "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-element-to-jsx-string": "^15.0.0",
     "react-hook-form": "^7.51.3",
