completed members functionality on card

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@next/env": "^14.2.2",
     "@prisma/client": "^5.13.0",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.4",
