--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@tabler/icons-react": "^3.2.0",
     "@tanstack/react-query": "^5.36.2",
     "@tiptap/extension-bold": "^2.4.0",
