--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@tabler/icons-react": "^3.2.0",
     "@tanstack/react-query": "^5.36.2",
+    "@tanstack/react-table": "^8.20.5",
     "@tiptap/extension-bold": "^2.4.0",
     "@tiptap/extension-bullet-list": "^2.4.0",
     "@tiptap/extension-italic": "^2.4.0",
