--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@stripe/stripe-js": "^4.5.0",
     "@tabler/icons-react": "^3.2.0",
     "@tanstack/react-query": "^5.36.2",
     "@tanstack/react-table": "^8.20.5",
@@ -69,6 +70,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "sonner": "^1.4.41",
+    "stripe": "^16.12.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
